refactor: separate projects and suggestions pages and clean up repo

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
                 <a href="https://github.com/Stavros-alt" target="_blank"
                     style="color: #666; text-decoration: none; margin-right: 15px;">GITHUB</a>
                 <a href="https://discord.gg/zEPrxfmN" target="_blank"
-                    style="color: #666; text-decoration: none;">DISCORD</a>
+                    style="color: #666; text-decoration: none; margin-right: 15px;">DISCORD</a>
+                <a href="index.html" style="color: #666; text-decoration: none; margin-right: 15px;">PROJECTS</a>
+                <a href="suggestions.html" style="color: #666; text-decoration: none;">SUGGESTIONS</a>
             </p>
         </header>
 
         <main class="save-menu">
-            <!-- Project 1: Ranker -->
+            <!-- ranker. it works. -->
             <div class="save-slot" id="slot-ranker">
                 <div class="slot-header">
                     <h2>Deltarune Song Ranker</h2>
@@ -35,7 +37,7 @@
                 <a href="https://stavros-alt.github.io/drSongRanker/" class="slot-link">OPEN</a>
             </div>
 
-            <!-- Project 2: Bot -->
+            <!-- bot. don't ask me how it runs. -->
             <div class="save-slot" id="slot-bot">
                 <div class="slot-header">
                     <h2>undertale-box-bot</h2>
@@ -46,7 +48,7 @@
                 <a href="https://github.com/Stavros-alt/undertale-box-bot" class="slot-link">OPEN</a>
             </div>
 
-            <!-- Project 3: Mods -->
+            <!-- mods. scraping is hell. -->
             <div class="save-slot" id="slot-mods">
                 <div class="slot-header">
                     <h2>Steam Mod Downloader</h2>
@@ -57,30 +59,6 @@
                 <a href="https://github.com/Stavros-alt/steamModDownloader" class="slot-link">OPEN</a>
             </div>
         </main>
-
-        <section class="dark-candy-box">
-            <h2>Suggestions</h2>
-            <form id="suggestion-form">
-                <div class="form-group">
-                    <label for="project">Project:</label>
-                    <select id="project" name="project" required>
-                        <option value="Ranker">Ranker</option>
-                        <option value="Bot">Boxicle9000</option>
-                        <option value="ModDownloader">Mod Downloader</option>
-                        <option value="Portfolio">Command Center</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="idea">Your Idea:</label>
-                    <textarea id="idea" name="idea" required placeholder="What should I fix next?"></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="contact">Contact (Optional):</label>
-                    <input type="text" id="contact" name="contact" placeholder="Discord or Email">
-                </div>
-                <button type="submit" class="pixel-btn">THROW IT IN THE HOLE</button>
-            </form>
-        </section>
     </div>
 </body>
 
